@@ -1,3 +1,7 @@
+Fri May  1 17:41:58 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
+
+    * examples/newsml_indexer.php: Started example NewsML indexer.
+
 Fri May  1 14:43:22 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
     
     * flaxclient.php: Added default value for query filters.
